<resources>
    <string name="selectPrompt">Country List</string>
    <string name="selectPrompt_month">Select Month</string>
    <string name="selectPrompt_year">Select Year</string>
    <string name="selectPrompt_day">Select Day</string>
    <string name="about_us_title">Rotaract Nepal App</string>
    <string name="app_name">Rotaract Nepal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rotaract Nepal</string>
    <string name="nav_header_subtitle">rotaractnepalapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
    <string name="fab1">News</string>
    <string name="fab2">Events</string>
    <string name="fab3">Chat</string>
    <string name="information">Information</string>
    <string name="bod">Board of Director</string>
    <string name="committees">Club Committees and Directors</string>
    <string name="appointed">Appointed Position</string>
    <string name="rotary">Rotary</string>
    <string name="rotaract">Rotaract</string>
    <string name="intaract">Intaract</string>
    <string name="joinus">How do I Join ?</string>
    <string name="ipp">IPP</string>
    <string name="president">President</string>
    <string name="vicepresident">Vice. Pres.</string>
    <string name="vicepre">Vice President</string>
    <string name="secretary">Secretary</string>
    <string name="treasurer">Treasurer</string>
    <string name="clubser">Club Ser.</string>
    <string name="clubservice">Club Service</string>
    <string name="intser">Int. Ser.</string>
    <string name="internationalservice">International Service</string>
    <string name="comser">Comm. Ser.</string>
    <string name="communityservice">Community Service</string>
    <string name="prodev">Pro. Dev.</string>
    <string name="professionaldevelopment">Professional Development</string>
    <string name="assdiroff">Ass. Dir.</string>
    <string name="sergeant">Sergeant</string>
    <string name="funchair">Fun. Chair</string>
    <string name="pubreloff">Pub. Rel.</string>
    <string name="itoff">IT officer</string>
    <string name="aboutbod"><u>About BOD Members...</u></string>
    <string name="aboutcommittees"><u>About Committees and Directors...</u></string>
    <string name="aboutappointed"><u>About Appointed Positions...</u></string>
    <string name="rotarytitle"><u>Rotary Club</u></string>
    <string name="rotaracttitle"><u>Rotaract Club</u></string>
    <string name="intaracttitle"><u>Intaract Club</u></string>
    <string name="websiterotary">www.rotaractnepal.org</string>
    <string name="districtno">District 3292 Nepal-Bhutan</string>
    <string name="cusHeadtitle">Title</string>
    <string name="district_no">District_No</string>
    <string name="website">Website</string>
    <string name="introduction_one">Introduction_One</string>
    <string name="introduction_two">Introduction_Two</string>
    <string name="events">Events</string>
    <string name="distconf">Dist. Conf.</string>
    <string name="dlts">DLTS</string>
    <string name="psmeet">PS Meet</string>
    <string name="ryla">RYLA</string>
    <string name="designation">Designation</string>
    <string name="assdirofficers">Assistant Directors and Officers</string>
    <string name="fundchair">Fundraising Chair</string>
    <string name="publicrelationofficer">Public Relations Officer</string>
    <string name="sergeantatarms">Sergeant-at-Arms</string>
    <string name="itofficers">Information Technology</string>
    <string name="title">Title</string>
    <string name="cusHeadFeedTitle">Your Feedback</string>
    <string name="club_name">Club Name</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="thanks">We would like to said that thanks for using our Rotaract Nepal App.</string>
    <string name="rtr_name">Rtr_Name</string>
    <string name="rtr_designation">Rtr_Designation</string>
    <string name="item_name">Item Name</string>
    <string name="member_name">Member Name</string>
    <string name="member_designation">Member Designation</string>
    <string name="rid_no">RID. No.:</string>
    <string name="item_designation">Item Designation</string>
    <string name="rac_budhanilkantha">RAC Budhanilkantha</string>
    <string name="rac_dillibazar_kathmandu">RAC Dillibazar-Kathmandu</string>
    <string name="rac_gongabu">RAC Gongabu</string>
    <string name="rac_kathmandu_metro">RAC Kathmandu Metro</string>
    <string name="rac_kathmandu_north_east">RAC Kathmandu North East</string>
    <string name="rac_kathmandu_sunrise">RAC Kathmandu Sunrise</string>
    <string name="rac_kathmandu_youth_north_east">RAC Kathmandu Youth North East</string>
    <string name="rac_matribhumi_baluwatar_iom">RAC Matribhumi Baluwatar IOM</string>
    <string name="rac_pashupati">RAC Pashupati</string>
    <string name="rac_rajdhani">RAC Rajdhani</string>
    <string name="rac_swoyambhu">RAC Swoyambhu</string>
    <string name="rac_thames_international_college">RAC Thames International College</string>
    <string name="rotaract_club_of_kantipur">Rotaract Club of Kantipur</string>
    <string name="news_title">Title</string>
    <string name="news_description">Description</string>
    <string name="news_date">Date</string>
    <string name="news_type">Type</string>
    <string name="news_location">Location</string>
    <string name="your_news">Create Your News</string>
    <string name="text_hint_title">Title</string>
    <string name="text_news_description">Description</string>
    <string name="text_news_location">Venue</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="pick_end_date">Pick End Date</string>
    <string name="pick_program_time">Pick Program Time</string>
    <string name="upload_news">Upload News</string>
    <string name="x">X</string>
    <string name="zone_i">Zone I</string>
    <string name="district_3292">District 3292</string>
    <string name="nepal_bhutan">Nepal-Bhutan</string>
    <string name="district_rotaract_representative_2018_19">District Rotaract Representative 2018-19</string>
    <string name="rtr_representative_name">Rtr. Saugat Gautam</string>
    <string name="justification">Justification</string>
    <string name="written_by">Written By: Rtr. Shirja Thapa</string>
    <string name="close">Close</string>
    <string name="name">Rtr. Keshab Bahadur Sunari</string>
    <string name="profession">Android App Develpor</string>
    <string name="address">Basantapur, Kathmandu, Nepal</string>
    <string name="blood_search">Blood Search</string>
    <string name="blood_donor_search_here">Blood Donor Search Here</string>
    <string name="last_year_events_details">Events</string>
    <string name="mero_sip">Mero Sip</string>
    <string name="tangal_higher_secodary_school">Tangal Higher Secodary School</string>
    <string name="_07_00_am_to_08_00_am">07:00 AM to 08:00 AM</string>
    <string name="up_coming_club_events">Up Coming Clubs Events</string>
    <string name="up_coming_events">Up Coming Events</string>
    <string name="home">Home</string>
    <string name="learning_resourcess">Learning Resourcess</string>
    <string name="news">Recent Projects</string>
    <string name="clubs">Clubs</string>
    <string name="chat">Chat</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="up_coming_district_events">Up Coming District Events</string>
    <string name="up_coming_zonal_events">Up Coming Zonal Events</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="organizer">Organizer</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="choose_your_club">Choose Your Club</string>
    <string name="choose_your_an_image">Choose your an Image</string>
    <string name="strpass">Password</string>
    <string name="strconfirmpassword">Confirm Password</string>
    <string name="confirmStatement">Confirm details and Sign up</string>
    <string name="strSignup">Signup</string>
    <string name="descOnlineImageView">this shows online icon for currently logged in user</string>
    <string name="user_name">User name</string>
    <string name="last_message">last message</string>
    <string name="last_date">last date</string>
    <string name="description">description</string>
    <string name="no_records_found">No records found</string>
    <string name="userDetails">user data</string>
    <string name="imageDesc">Profile picture of User</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="search_icon">search icon</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth Date</string>
    <string name="loginCredentials">login credentials</string>
    <string name="yy">yy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="street_and_block_address">Street and Block address</string>
    <string name="state">State</string>
    <string name="address_details">Address Details</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="Username">Username</string>
    <string name="strEmail">Email</string>
    <string name="your_name">Your Name</string>
    <string name="show_the_news"><u>Show the News</u></string>
    <string name="objectives"><u>Objectives</u></string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="project_detail"><u>Project Detail</u></string>
    <string name="venue">Venue</string>
    <string name="project_club_name">Club</string>
    <string name="videos">Videos</string>
    <string name="rotaract_clubs_of_nepal"><u>Rotaract Clubs of Nepal</u></string>
    <string name="rotaract_software_tutorials">Rotaract Software Tutorials</string>
    <string name="create_your_recent_project_news"><u>Create Your Recent Project News</u></string>
    <string name="recent_project">Recent Project :</string>
    <string name="project_type">Project Type</string>
    <string name="news_objective">Objective</string>
    <string-array name="monthList">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
</resources>