<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_rect_bg"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/eventsDate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/eventsMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:text="@string/month"
                android:textSize="20sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/eventsDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:text="@string/day"
                android:textSize="50sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/eventsYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:text="@string/year"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp">
            <TextView
                android:id="@+id/eventsClubName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textSize="12sp"
                android:lines="1"
                android:text="@string/organizer"/>
            <TextView
                android:id="@+id/eventsProjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:lines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:text="@string/event"/>
            <TextView
                android:id="@+id/eventsVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:lines="1"
                android:textSize="12sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:text="@string/venue"/>
            <TextView
                android:id="@+id/eventsTime"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:lines="1"
                android:text="@string/time"/>
            <include layout="@layout/event_comm_adapter"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>