<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_rect_bg"
    android:backgroundTint="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/closeDialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circlebackground"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/x"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/dialogNewsDefaultImage"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_below="@+id/closeDialog"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rotaract"
        android:tint="@android:color/white" />
    <TextView
        android:id="@+id/dialogNewsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dialogNewsDefaultImage"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
    <TextView
        android:id="@+id/dialogWebLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dialogNewsTitle"
        android:text="@string/websiterotary"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/dialogWebLink"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:scrollbars="none"
        android:id="@+id/informationScrollView">
        <com.codesgood.views.JustifiedTextView
            android:id="@+id/dialogNewsDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/justification"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </ScrollView>
    <TextView
        android:id="@+id/dialogNewsObjectives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/informationScrollView"
        android:text="@string/objectives"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="15dp"/>
</RelativeLayout>