<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/round_rect_bg">
    <TextView
        android:id="@+id/evnetDetailPopupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        android:text="@string/mero_sip"
        android:layout_margin="4dp"/>
    <ImageView
        android:layout_below="@id/evnetDetailPopupTitle"
        android:id="@+id/EventImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/mero_sip"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/closeDialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/circlebackground"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/x"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
    <com.codesgood.views.JustifiedTextView
        android:layout_below="@id/EventImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newsDescription"
        android:text="@string/news_description"
        android:textStyle="bold"
        android:maxLines="5"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newsLocation"
        android:text="@string/news_location"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/newsDescription"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/newsLocation">
        <TextView
            android:id="@+id/newsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/news_date" />
        <TextView
            android:id="@+id/newsTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/news_time"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
</RelativeLayout>