<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/thumbnailChatItem"
            android:layout_width="65dp"
            android:layout_height="73dp"
            android:src="@drawable/ic_profile_male" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thumbnailChatItem_imageURI"
            android:visibility="gone"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="bottom|end"
            android:id="@+id/onlineIcon"
            android:visibility="gone"
            android:contentDescription="@string/descOnlineImageView"
            android:src="@drawable/ic_action_online" />
    </FrameLayout>

    <TextView
        android:id="@+id/fullNameChatItem"
        android:layout_width="198dp"
        android:layout_height="23dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="16dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lastMessageChatItem"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastMessageChatItem"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="11dp"
        android:text="@string/last_message"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/fullNameChatItem" />





    <TextView
        android:id="@+id/lastAccessedDate"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/last_date"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/lastMessageChatItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toEndOf="@+id/fullNameChatItem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
















